# Early-Stopping-Byzantine-Agreement-Simulator-Prototype

./: .flake8  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/cis/: config.yaml
bmad/core/: config.yaml
docs/: PRD.md  architecture.md  bmm-workflow-status.yaml  brainstorming-session-results-2025-11-03.md  epics.md  implementation-readiness-report-2025-11-04.md  product-brief-final-project-code-2025-11-03.md  sprint-status.yaml  tech-spec-epic-1.md
docs/PRD/: domain-specific-requirements.md  executive-summary.md  functional-requirements.md  implementation-planning.md  index.md  innovation-novel-patterns.md  next-steps.md  non-functional-requirements.md  product-scope.md  project-classification.md  projecttype-specific-requirements.md  references.md  success-criteria.md  the-magic-woven-throughout.md  user-experience-principles.md
docs/architecture/: architecture-decision-records-adrs.md  complete-project-structure.md  data-architecture.md  decision-summary-table.md  deployment-architecture.md  development-environment.md  epic-to-architecture-mapping.md  executive-summary.md  implementation-patterns-agent-consistency.md  index.md  integration-points.md  next-steps.md  novel-architectural-patterns.md  performance-considerations.md  security-architecture.md  validation-checklist.md
docs/epics/: epic-details.md  epic-summary.md  final-summary.md  index.md  (+2 more)
tests/: conftest.py  test_project_structure.py
(+75 files in other folders)
